Survive a JVM that refuses sun.misc.Unsafe
JEP 471 is phasing out the memory-access methods: a warning from JDK 24, an
exception by default in JDK 26, removal after that. Appending an enum constant
needs them, because writing a final field has no supported alternative; a
VarHandle from unreflectVarHandle answers UnsupportedOperationException for a
final field with or without setAccessible, for instance and static fields alike.

The dependency was not the problem, the failure was. Run with
--sun-misc-unsafe-memory-access=deny, which is JDK 26 brought forward, the
refusal escaped as 'Structural reload failed: staticFieldBase': the whole class
reload lost, including a method body changed in the same save that had nothing
to do with the enum, and a JDK internal name put in front of the developer as
though it were the reason. The read of the constant array sat outside the try
that was meant to cover this.

Every accessor now converts the refusal, remembers it so the next reload does
not ask again and warn again, and the append declines with a sentence naming
the policy and the flag that reproduces it. Measured on both paths: denied, the
unrelated method still reloads; allowed, the constant is still added.

The JVM's own warning on 24 and 25 ends by asking the reader to report this to
the maintainers of a Reclazz class, so the log now answers it.